--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Kuvauksia-Hailuodosta_65602
 _version: 0.1.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Paulaharju, Samuli
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/44322
     wikipedia: https://fi.wikipedia.org/wiki/Samuli_Paulaharju
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/65602#Kuvauksia-Hailuodosta
 gutenberg_issued: '2021-06-12'
 gutenberg_type: Text
 identifiers:
